--- a/css/style.css
+++ b/css/style.css
@@ -621,7 +621,8 @@ div#myTabContent {
 /*-- footer --*/
 .footer{
 	padding:4em 0;
-	background:#212121;
+	background-image: url(images/footfig.jpg);
+	background-size: 100% 100%;
 }
 .footer-grid h3{
 	font-size:1.5em;
