--- a/css/style.css
+++ b/css/style.css
@@ -621,8 +621,8 @@ div#myTabContent {
 /*-- footer --*/
 .footer{
 	padding:4em 0;
-	background-image: url(footfig.jpg);
-	background-size: 100% 100%;
+	background: url(../images/footfig.jpg);
+	background-size: cover;
 }
 .footer-grid h3{
 	font-size:1.5em;
